<resources>
    <string name="app_name">Meal Factory App</string>
    <string name="app">Meal Factory</string>
    <string name="logo">Logo</string>
    <string name="phone">0712345678</string>
    <string name="enter_phone">Enter Mobile Number</string>
    <string name="next_btn">Next</string>
    <string name="back_btn">Back</string>
    <string name="enter_code">Enter the Confirmation Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>

    <string name="srilankan">Sri Lankan</string>
    <string name="indian">Indian</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>
    <string name="view_btn">View</string>

    <string name="recipe1">Rice and Curry - Egg</string>
    <string name="price1">Rs.180.00</string>
    <string name="recipe2">Rice and Curry - Chicken</string>
    <string name="price2">Rs.250.00</string>
    <string name="recipe3">Rice and Curry - Fish</string>
    <string name="price3">Rs.200.00</string>
    <string name="recipe4">Cheese Kottu</string>
    <string name="price4">Rs.300.00</string>

    <string name="home_btn">Home</string>
    <string name="favorite_btn">Favorites</string>
    <string name="order_btn">Order</string>
    <string name="addFav_btn">Add to Favorites</string>
    <string name="add_btn">Add</string>
    <string name="dlt_btn">Delete</string>

    <string name="para_1">\n\n\n Basmathi Rice\n
                            Devilled Potato\n Dhal Curry\n
                            Chicken Curry\nVegetable Salad</string>
    <string name="addMenuBtn">Add Item</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>
    <string name="insertItemName">Item Name</string>
    <string name="insertDescription">Description</string>
    <string name="uploadImg">Upload Image</string>
    <string name="insertPrice">Price</string>
    <string name="addNewItem">Add New Item</string>
    <string name="save_btn">Save</string>
    <string name="insertItemCode">Item Code</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="mobile">Mobile number</string>
    <string name="myProfile">My Profile</string>
    <string name="update_btn">Update Profile</string>
    <string name="deleteProf_btn">Delete Profile</string>
    <string name="show_btn">Show</string>
    <string name="show_btn_">View Profile</string>
    <string name="insertType">Item Type</string>
    <string name="textView">Register to Meal Factory</string>
    <string name="recipe_in1">Chicken Biriyani</string>
    <string name="recipe_in2">Masala Dosa</string>
    <string name="recipe_ch1">Egg Fried Rice</string>
    <string name="recipe_ch2">Chinese soy souce noodles</string>
    <string name="recipe_it1">Creamy White Sauce Pasta</string>
    <string name="recipe_it2"><![CDATA[Chicken & Cheese Lasagna]]></string>
    <string name="nameoncard">Name on card</string>
    <string name="caradno">Card No</string>
    <string name="exdate">expirdate</string>
    <string name="cvv">cvv</string>
    <string name="ContactNo">Contact No</string>
    <string name="sub_btn">Submit</string>
    <string name="Dil_ive">Enter Details</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Location">Location</string>
    <string name="Contact_no">Contact no</string>
    <string name="Name1"></string>
    <string name="Address1"></string>
    <string name="Location1"></string>
    <string name="Contact_no1"></string>
    <string name="Sub_btn">Submit</string>
    <string name="Can_btn">Cancle</string>
    <string name="Home_btn">Home</string>
    <string name="bag_btn">Bag</string>
    <string name="Fav_btn">Favorites</string>
    <string name="profile_btn">Profile</string>

    <string name="Details">Delivery Details</string>
    <string name="Payement_btn">Make Payment</string>

    <string name="Payment">Payment</string>
    <string name="Cash_btn">Cash</string>
    <string name="Card_btn">Card</string>

    <string name="method">Choose Payment Method</string>
    <string name="visa_btn">Visa</string>
    <string name="master_btn">Master</string>
    <string name="Date">Date</string>
    <string name="Date1"></string>
    <string name="Amount">Amount</string>
    <string name="Amount1"></string>

    <string name="card_det">Enter Card Details</string>
    <string name="Card_no">Card No</string>
    <string name="card_no1"></string>
    <string name="Sec">Security code</string>
    <string name="sec1">cvn</string>
    <string name="expir_date">Expire Date</string>
    <string name="ex_date"></string>
    <string name="pay_btn">Pay</string>
    <string name="Next">next</string>
    <string name="show">show</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="enter">Enter</string>
    <string name="date">dd/mm</string>
    <string name="sec">cvv</string>
    <string name="unitprice">UnitPrice</string>
    <string name="Quantity">Quantity</string>


    <string name="divider">Divider</string>
    <string name="title">Contact Us</string>

    <string name="message">type message</string>
    <string name="submit_btn">SEND MESSAGE</string>
    <string name="delivery_icon">Delivery</string>
    <string name="mail_icon">Meal Factory E-mail</string>
    <string name="contact_number">+94764532986</string>
    <string name="meal_factory_email">mealfactory@gmail.com</string>

    <string name="thanking_msg1">Thank You</string>
    <string name="thanking_msg2">We will be in touch shortly</string>
    <string name="backToHome_btn">Back to Home</string>


    <string name="topic">Give a Feedback</string>
    <string name="notice">write a review</string>
    <string name="rate">Rate the Delivery</string>
    <string name="rating_bar">Rate</string>
    <string name="feedback_message">type the message</string>
    <string name="submit_btn2">Submit</string>


    <string name="Delivery_btn">Delivery</string>
    <string name="Takeaway_btn">Takeaway</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_ID">Enter ID No</string>
    <string name="Select_Branch">Select the branch</string>
    <string name="order_time">Order required time</string>

    <string name="order_details">order details</string>
    <string name="food_name">food name</string>
    <string name="quantity">quantity</string>
    <string name="price">price</string>
    <string name="total">total</string>
    <string name="bill_total">bill total</string>

    <string name="order_history">order history</string>
    <string name="order_type">order type</string>

    <string name="description">Order description</string>

    <string name="done_btn">done</string>
    <string name="Contactus">Contact us</string>
    <string name="feedback">Feedback</string>


</resources>