<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminViewDeleteRecipeActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="372dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/home_btn"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/bag_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/bag_btn"
            app:srcCompat="@drawable/bag" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="350dp"
        android:layout_height="446dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/recipe_ch1"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/recipe2"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sl2"
                android:layout_width="90dp"
                android:layout_height="201dp"
                android:layout_weight="1"
                android:contentDescription="@string/recipe2"
                app:srcCompat="@drawable/chicken_rice___curry" />

            <TextView
                android:id="@+id/para_1"
                android:layout_width="wrap_content"
                android:layout_height="201dp"
                android:layout_weight="1"
                android:text="@string/para_1"
                android:textAlignment="center"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <TextView
            android:id="@+id/price1"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/price2"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/order_btn"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/colorTheme"
            android:text="@string/edit_btn"
            android:textAlignment="center"
            android:textColor="@color/colorBackground"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/deleteProf_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorTheme"
            android:text="@string/delete_btn"
            android:textColor="@color/colorBackground"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="368dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.013">

        <Button
            android:id="@+id/srilankan"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:text="@string/srilankan"
            android:textColor="@color/colorTheme"
            android:textStyle="bold" />

        <Button
            android:id="@+id/indian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/indian" />

        <Button
            android:id="@+id/chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chinese" />

        <Button
            android:id="@+id/italian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/indian" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="280dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="49dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:contentDescription="@string/back_btn"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/myProfile"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:text="@string/app"
            android:textAlignment="center"
            android:textColor="@color/colorName"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>