<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuSl">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="366dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/myProfile"
            android:layout_width="295dp"
            android:layout_height="match_parent"
            android:text="@string/app"
            android:textAlignment="center"
            android:textColor="@color/colorName"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="368dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/srilankan"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:text="@string/srilankan"
            android:textColor="@color/colorTheme"
            android:textStyle="bold" />

        <Button
            android:id="@+id/indian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/indian" />

        <Button
            android:id="@+id/chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chinese" />

        <Button
            android:id="@+id/italian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/italian" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="369dp"
        android:layout_height="73dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/home_btn"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/bag_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/bag_btn"
            app:srcCompat="@drawable/bag" />

        <ImageButton
            android:id="@+id/favorite_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/favorite_btn"
            app:srcCompat="@drawable/favorite" />

        <ImageButton
            android:id="@+id/profile_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/profile_btn"
            app:srcCompat="@drawable/profile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="353dp"
        android:layout_height="288dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sl1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/recipe1"
                app:srcCompat="@drawable/egg_rice___curry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipe1"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:text="@string/recipe1"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/price2"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/price1"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack" />

                <Button
                    android:id="@+id/view_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:text="@string/view_btn"
                    android:textAlignment="center"
                    android:textColor="@color/colorTheme" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/recipe2"
                app:srcCompat="@drawable/chicken_rice___curry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipe2"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:text="@string/recipe2"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/price2"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:text="@string/price2"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack" />

                <Button
                    android:id="@+id/view_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBackground"
                    android:text="@string/view_btn"
                    android:textAlignment="center"
                    android:textColor="@color/colorTheme" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>